# neuroglancer-scripts

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENCE.txt  MANIFEST.in  README.md  README.rst  compress_segmentation_chunks.py  compute_scales.py  convert.py  convert_bigbrain.py  convert_chunks.py  convert_chunks_to_jpeg.py  generate_scales_info.py  info_fullres.json  mesh_to_precomputed.py  mesh_to_vtk.py  neuroglancer-apache.conf  neuroglancer.conf  off_to_vtk.py  pyproject.toml  requirements.txt  scale_stats.py  setup.cfg  setup.py  slices_to_raw_chunks.py  stl_to_precomputed.py  tox.ini  volume_to_raw_chunks.py
.github/workflows/: cov.yaml  publish_to_pypi.yaml  tox.yaml
BigBrainRelease.2015/: README.md  create_fullres_chunks.py  info_fullres.json
JuBrain/: .gitattributes  .gitignore  README.md  colin.surf.gii  convert-labelled-mesh.py  info_atlas_fullres.json  info_colin_fullres.json
JuBrain/v2.2c/: README.md
docs/: Makefile  conf.py  examples.rst  index.rst  neuroglancer-info.rst  release-notes.rst  script-usage.rst  serving-data.rst
docs/api/: neuroglancer_scripts.accessor.rst  neuroglancer_scripts.chunk_encoding.rst  neuroglancer_scripts.downscaling.rst  neuroglancer_scripts.file_accessor.rst  neuroglancer_scripts.http_accessor.rst  neuroglancer_scripts.mesh.rst  neuroglancer_scripts.precomputed_io.rst  neuroglancer_scripts.pyramid_io.rst  neuroglancer_scripts.rst  neuroglancer_scripts.utils.rst
examples/BigBrainRelease.2015/: .gitignore  README.md  mesh_labels.csv
experimental/: mesh_to_vtk.py  off_to_vtk.py  stl_to_precomputed.py
neuroglancer_scripts/: __init__.py  _compressed_segmentation.py  accessor.py  chunk_encoding.py  chunk_io.py  compressed_segmentation.py  downscaling.py  file_accessor.py  http_accessor.py  jpeg.py  pyramid_io.py  utils.py
script_tests/: test_scripts.py
src/neuroglancer_scripts/: __init__.py  _compressed_segmentation.py  _jpeg.py  accessor.py  chunk_encoding.py  data_types.py  downscaling.py  dyadic_pyramid.py  file_accessor.py  gcs_accessor.py  http_accessor.py  iobase.py  mesh.py  n5_io.py  precomputed_io.py  pyramid_io.py  sharded_base.py  sharded_file_accessor.py  sharded_http_accessor.py  tqdm.py  transform.py  utils.py  volume_reader.py
src/neuroglancer_scripts/scripts/: __init__.py  compute_scales.py  convert_chunks.py  generate_scales_info.py  link_mesh_fragments.py  mesh_to_precomputed.py  scale_stats.py  slices_to_precomputed.py  volume_to_precomputed.py  volume_to_precomputed_pyramid.py
src/neuroglancer_scripts/volume_io/: base_io.py  n5_io.py  zarr_io.py
tests/: test_accessor.py  test_chunk_encoding.py  test_downscaling.py  test_dyadic_pyramid.py  test_file_accessor.py  test_mesh.py  test_scripts.py  test_utils.py
unit_tests/: test_accessor.py  test_chunk_encoding.py  test_data_types.py  test_downscaling.py  test_dyadic_pyramid.py  test_file_accessor.py  test_gcs_accessor.py  test_http_accessor.py  test_mesh.py  test_precomputed_io.py  test_sharded_base.py  test_sharded_file_accessor.py  test_sharded_http_accessor.py  test_transform.py  test_utils.py  test_volume_reader.py
unit_tests/volume_io/: test_base_io.py  test_n5_io.py  test_zarr_io.py
