[build-system]
requires = [
    "setuptools>=51.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"  # py36 does not exist
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "NPY",
]
ignore = [
    "N802",  # Gives false positives when a name contains an uppercase acronym
]
