[metadata]
name = neuroglancer-scripts
version = attr: neuroglancer_scripts.__version__
author = Yann Leprince
author_email = yann.leprince@cea.fr
description = Conversion of images to the Neuroglancer pre-computed format
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/HumanBrainProject/neuroglancer-scripts
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Visualization
keywords = neuroimaging

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.5
install_requires =
    nibabel >= 2
    numpy >= 1.11.0
    pillow >= 1.1.6
    requests >= 2
    scikit-image  # TODO use pillow instead
    tqdm ~= 4.29
    imagecodecs  # required to read LZW compressed tiff files

[options.packages.find]
where = src

[options.extras_require]
# Remember to keep test dependencies synchronized with the list of dependencies
# in tox.ini (at the moment: pytest, requests-mock)
dev =
    pytest
    requests-mock
    check-manifest
    flake8
    pep8-naming
    pre-commit
    pytest-cov
    readme_renderer
    sphinx
    tox
docs =
    sphinx

[options.entry_points]
console_scripts =
    compute-scales = neuroglancer_scripts.scripts.compute_scales:main
    convert-chunks = neuroglancer_scripts.scripts.convert_chunks:main
    generate-scales-info = neuroglancer_scripts.scripts.generate_scales_info:main
    link-mesh-fragments = neuroglancer_scripts.scripts.link_mesh_fragments:main
    mesh-to-precomputed = neuroglancer_scripts.scripts.mesh_to_precomputed:main
    scale-stats = neuroglancer_scripts.scripts.scale_stats:main
    slices-to-precomputed = neuroglancer_scripts.scripts.slices_to_precomputed:main
    volume-to-precomputed = neuroglancer_scripts.scripts.volume_to_precomputed:main
    volume-to-precomputed-pyramid = neuroglancer_scripts.scripts.volume_to_precomputed_pyramid:main
